# helix

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
helix/: __init__.py  __main__.py  _backend.py  _dwt_matrix.py  _jax_ops.py  _numpy_ops.py  coherent.py  config.py  io.py  pipeline.py  run.py  wavelet.py
helix/core/: __init__.py  backend.py  dwt_matrix.py  wavelet.py  wavelet_ops_jax.py  wavelet_ops_numpy.py  wavelet_ops_torch.py
helix/optical/: __init__.py  config.py  io.py  metrics.py  pipeline.py  viz.py
helix/tpc/: __init__.py  coherent.py  coherent_ops_jax.py  coherent_ops_numpy.py  config.py  io.py  pipeline.py  run.py
scripts/: passes_sweep.py  plot_gallery.py  plot_metrics.py  plot_steps.py  plot_wavelet_coeffs.py  plot_wavelet_levels.py  run_metrics.py
scripts/optical/: README.md  abs_rms_gpu.py  active_vs_kept.py  analyze_big.py  coeffs_per_level.py  final_frontier.py  kept_per_event.py  plot_active_vs_kept.py  plot_coeffs_per_level.py  plot_final.py  plot_pareto_clean.py  plot_rms_noise.py  sweep_big.py  transform_compare.py  wpt_compare.py  zerotree_estimate.py
tests/: bench_numpy.py  conftest.py  test_backend.py  test_coherent.py  test_optical.py  test_pipeline.py  test_wavelet.py
