[project]
name = "helix-tpc"
version = "0.1.0"
description = "Hierarchical Encoding for Learned Inference on eXperimental data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "PyWavelets>=1.4",
    "scipy>=1.10",
]

[project.optional-dependencies]
# Backend frameworks are optional: helix.core imports only the selected one
# lazily. NumPy (base dep) is always available; add jax and/or torch as needed.
jax-cpu = ["jax[cpu]>=0.4.20"]
jax-gpu = ["jax[cuda12]>=0.4.20"]
torch-cpu = ["torch>=2.0"]          # CPU wheels: pip install --index-url https://download.pytorch.org/whl/cpu
cpu = ["jax[cpu]>=0.4.20", "torch>=2.0"]
gpu = ["jax[cuda12]>=0.4.20", "torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[project.scripts]
helix = "helix.tpc.run:main"
helix-tpc = "helix.tpc.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["temp", ".git", "*.egg-info"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helix*"]
